Update styles, CTA image, and portfolio pages

--- a/index.html
+++ b/index.html
@@ -916,19 +916,8 @@
 
   </div>
 </section>
-<section class="call-to-action-section">
-
-  <div class="p-5 container call-to-action section">
-
-    <!-- background patterns MUST be inside -->
-    <div class="bg-shape-1">
-      <img src="images/pattern-2.svg" alt="abstract">
-    </div>
-
-    <div class="bg-shape-2">
-      <img src="images/pattern-3.svg" alt="abstract">
-    </div>
-
+<section>
+  <div  class="p-5 container call-to-action section" >
     <div class="cta-wrapper">
       <div class="content-block">
         <div class="row align-items-center">
@@ -936,7 +925,7 @@
           <div class="col-lg-7">
             <div class="text-content">
 
-              <div class="section-label">
+              <div class="section-label" >
                 <span>Request a Free Quote</span>
               </div>
 
@@ -950,7 +939,7 @@
                 Share your requirements and get a clear, no-nonsense quotation based on scope and execution.
               </p>
 
-              <div class="benefits-list">
+              <div class="benefits-list" data-aos-delay="400">
                 <div class="benefit-row">
                   <div class="benefit-item">
                     <div class="check-icon">
@@ -958,7 +947,6 @@
                     </div>
                     <span>Code-First Development</span>
                   </div>
-
                   <div class="benefit-item">
                     <div class="check-icon">
                       <i class="bi bi-check2"></i>
@@ -966,7 +954,6 @@
                     <span>Transparent Pricing</span>
                   </div>
                 </div>
-
                 <div class="benefit-row">
                   <div class="benefit-item">
                     <div class="check-icon">
@@ -974,7 +961,6 @@
                     </div>
                     <span>SEO & Mobile Optimized</span>
                   </div>
-
                   <div class="benefit-item">
                     <div class="check-icon">
                       <i class="bi bi-check2"></i>
@@ -984,11 +970,10 @@
                 </div>
               </div>
 
-              <div class="action-group">
+              <div class="action-group" data-aos-delay="450">
                 <a href="quotation.html" class="btn btn-primary-action">
                   Get Your Quote
                 </a>
-
                 <a href="pdf/PSWebStudio_Quotation_2025.pdf"
                    class="btn btn-text-link"
                    target="_blank">
@@ -997,21 +982,17 @@
                 </a>
               </div>
 
-              <div class="trust-indicators">
+              <div class="trust-indicators" data-aos-delay="500">
                 <div class="indicator">
                   <div class="metric">25+</div>
                   <div class="label">Projects Delivered</div>
                 </div>
-
                 <div class="separator"></div>
-
                 <div class="indicator">
                   <div class="metric">95%</div>
                   <div class="label">Client Retention</div>
                 </div>
-
                 <div class="separator"></div>
-
                 <div class="indicator">
                   <div class="metric">2+ Years</div>
                   <div class="label">Hands-on Experience</div>
@@ -1027,6 +1008,32 @@
                 <img src="images/cta/cta-4.webp"
                      alt="PSWeb Studio Web Development"
                      class="main-visual">
+
+                <div class="floating-badge badge-1">
+                  <div class="badge-icon">
+                    <i class="bi bi-code-slash"></i>
+                  </div>
+                  <div class="badge-text">
+                    <div class="badge-title">Frontend Focused</div>
+                    <div class="badge-subtitle">Clean, Maintainable Code</div>
+                  </div>
+                </div>
+
+                <div class="floating-badge badge-2">
+                  <div class="badge-icon">
+                    <i class="bi bi-speedometer2"></i>
+                  </div>
+                  <div class="badge-text">
+                    <div class="badge-title">Performance Ready</div>
+                    <div class="badge-subtitle">Fast & Lightweight Builds</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="decorative-elements">
+                <div class="element element-1"></div>
+                <div class="element element-2"></div>
+                <div class="element element-3"></div>
               </div>
             </div>
           </div>
@@ -1034,10 +1041,14 @@
         </div>
       </div>
     </div>
-
   </div>
+<div class="bg-shape-1">
+     <img src="images/pattern-2.svg" alt="abstract">
+  </div>
+  <div class="bg-shape-2">
+      <img src="images/pattern-3.svg" alt="abstract">
+    </div>
 </section>
-
 <!-- FAQ Section -->
 <section id="faq-section" class="faq-section">
   <div class="container section-title">
