Replace CTA image with PNG and update homepage

--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
           <div class="col-lg-5">
             <div class="visual-section">
               <div class="image-container">
-                <img src="images/cta/cta-4.webp"
+                <img src="images/cta/cta-4.png"
                      alt="PSWeb Studio Web Development"
                      class="main-visual">
 
