--- a/index.html
+++ b/index.html
@@ -288,138 +288,7 @@
 
   </div>
 </section>
-<section id="featured-services" class="featured-services section">
-
-  <div class="container" >
-<div class="row g-4">
-
-  <!-- Card 1 -->
-  <div class="col-lg-4 col-md-6" >
-    <div class="service-item">
-      <div class="icon dev">
-        <i class="bi bi-stack"></i>
-        <h3>Web Development</h3>
-      </div>
-
-      <p class="mb-2">
-        We build fast, responsive websites that run smoothly on every device, with clean code and strong performance.
-      </p>
-
-      <div class="card-links">
-        <a href="#" class="link-item">
-          Learn More <i class="bi bi-arrow-right"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Card 2 -->
-  <div class="col-lg-4 col-md-6">
-    <div class="service-item">
-      <div class="icon dev">
-        <i class="bi bi-shield-check"></i>
-        <h3>Secure Systems</h3>
-      </div>
-
-      <p class="mb-2">
-        Your website stays safe and stable with proven security practices to protect data and prevent vulnerabilities.
-      </p>
-
-      <div class="card-links">
-        <a href="#" class="link-item">
-          Learn More <i class="bi bi-arrow-right"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Card 3 -->
-  <div class="col-lg-4 col-md-6">
-    <div class="service-item">
-      <div class="icon dev">
-        <i class="bi bi-graph-up"></i>
-        <h3>Growth Strategy</h3>
-      </div>
-
-      <p class="mb-2">
-        We create data-driven strategies to boost visibility, engagement, and conversions based on your business goals.
-      </p>
-
-      <div class="card-links">
-        <a href="#" class="link-item">
-          Learn More <i class="bi bi-arrow-right"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Card 4 -->
-  <div class="col-lg-4 col-md-6" data-aos-delay="400">
-    <div class="service-item">
-      <div class="icon dev">
-        <i class="bi bi-palette2"></i>
-        <h3>UX Design</h3>
-      </div>
-
-      <p class="mb-2">
-        We design user-friendly interfaces with clear navigation, intuitive layouts, and smooth interactions for real users.
-      </p>
-
-      <div class="card-links">
-        <a href="#" class="link-item">
-          Learn More <i class="bi bi-arrow-right"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Card 5 -->
-  <div class="col-lg-4 col-md-6" data-aos-delay="500">
-    <div class="service-item">
-      <div class="icon dev">
-        <i class="bi bi-bar-chart-fill"></i>
-        <h3>SEO & Analytics</h3>
-      </div>
-
-      <p class="mb-2">
-        We optimize your website to rank higher and track real user behavior to make data-driven decisions effectively.
-      </p>
-
-      <div class="card-links">
-        <a href="#" class="link-item">
-          Learn More <i class="bi bi-arrow-right"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Card 6 -->
-  <div class="col-lg-4 col-md-6">
-    <div class="service-item">
-      <div class="icon dev">
-        <i class="bi bi-pencil-square"></i>
-        <h3>Content Writing</h3>
-      </div>
-
-      <p class="mb-2">
-        We craft clear, SEO-friendly content that speaks to users and search engines, supporting your growth strategy.
-      </p>
-
-      <div class="card-links">
-        <a href="#" class="link-item">
-          Learn More <i class="bi bi-arrow-right"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-</div>
-
-  </div>
-
-</section>
-
- <section class="project p-0">
+ <section class="project">
   <div class="container">
     <div id="psweb-project-options-container" class="psweb-project-options"></div>
     </div>
