--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 </section>
 
 <!-- About Section -->
-<section id="about" class="about section pb-0">
+<section id="about" class="about section">
 
   <div class="container" >
 
