--- a/portfolio/andaman-dmc.html
+++ b/portfolio/andaman-dmc.html
@@ -910,7 +910,8 @@
             <div class="contact-info mt-3">
               <div class="contact-item d-flex align-items-center mb-2">
                 <i class="bi bi-envelope me-2"></i>
-                <span>hello@pswebstudio.com</span>
+                <span><a href="mailto:hello@pswebstudio.com">hello@pswebstudio.com</a></span>
+
               </div>
             </div>
           </div>
