--- a/portfolio/andaman-dmc.html
+++ b/portfolio/andaman-dmc.html
@@ -514,17 +514,17 @@
   <header id="header" class="header sticky-top">
     <div class="nav-wrap">
       <div class="container d-flex justify-content-between position-relative">
-        <a href="index.html" class="logo d-flex align-items-center">
+        <a href="https://pswebstudio.netlify.app/" class="logo d-flex align-items-center">
           <img src="../images/psweb-logo.png" alt="PSWeb Studio logo">
         </a>
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-us.html">About</a></li>
+            <li><a href="https://pswebstudio.netlify.app/">Home</a></li>
+            <li><a href="https://pswebstudio.netlify.app//about-us.html">About</a></li>
             <li><a href="index.html#services">Services</a></li>
             <li><a href="portfolio.html" class="active">Portfolio</a></li>
             <li><a href="index.html#team">Team</a></li>
-            <li><a href="contact-us.php" class="contact-blink">Contact</a></li>
+            <li><a href="https://pswebstudio.netlify.app/contact-us.php" class="contact-blink">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -540,7 +540,7 @@
         <div class="breadcrumbs">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="index.html"><i class="bi bi-house"></i> Home</a></li>
+              <li class="breadcrumb-item"><a href="https://pswebstudio.netlify.app/"><i class="bi bi-house"></i> Home</a></li>
               <li class="breadcrumb-item"><a href="portfolio.html">Portfolio</a></li>
               <li class="breadcrumb-item active current">Andaman DMC</li>
             </ol>
@@ -847,7 +847,7 @@
         <!-- Brand Section -->
         <div class="col-lg-4 col-md-6">
           <div class="footer-brand">
-            <a href="index.html" class="logo d-flex align-items-center mb-3">
+            <a href="https://pswebstudio.netlify.app/" class="logo d-flex align-items-center mb-3">
               <span class="sitename">PSWeb Studio</span>
             </a>
             <p class="tagline">
@@ -871,10 +871,10 @@
               <div class="col-6 col-md-4">
                 <h5>Studio</h5>
                 <ul class="list-unstyled">
-                  <li><a href="about-us.html">About</a></li>
+                  <li><a href="https://pswebstudio.netlify.app//about-us.html">About</a></li>
                   <li><a href="portfolio.html" class="active">Portfolio</a></li>
                   <li><a href="index.html#services">Services</a></li>
-                  <li><a href="contact-us.php">Contact</a></li>
+                  <li><a href="https://pswebstudio.netlify.app/contact-us.php">Contact</a></li>
                 </ul>
               </div>
               <div class="col-6 col-md-4">
