--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -351,17 +351,17 @@
   <header id="header" class="header sticky-top">
     <div class="nav-wrap">
       <div class="container d-flex justify-content-between position-relative">
-        <a href="index.html" class="logo d-flex align-items-center">
+        <a href="https://pswebstudio.netlify.app/" class="logo d-flex align-items-center">
           <img src="../images/psweb-logo.png" alt="PSWeb Studio logo">
         </a>
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-us.html">About</a></li>
+            <li><a href="https://pswebstudio.netlify.app/">Home</a></li>
+            <li><a href="https://pswebstudio.netlify.app//about-us.html">About</a></li>
             <li><a href="index.html#services">Services</a></li>
             <li><a href="portfolio.html" class="active">Portfolio</a></li>
             <li><a href="index.html#team">Team</a></li>
-            <li><a href="contact-us.php" class="contact-blink">Contact</a></li>
+            <li><a href="https://pswebstudio.netlify.app/contact-us.php" class="contact-blink">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -383,7 +383,7 @@
             </p>
             <div class="d-flex flex-wrap justify-content-center gap-3">
               <a href="#portfolio-grid" class="btn btn-primary btn-lg px-4">View Projects</a>
-              <a href="contact-us.php" class="btn btn-outline-primary btn-lg px-4 bg-white">Start Your Project</a>
+              <a href="https://pswebstudio.netlify.app/contact-us.php" class="btn btn-outline-primary btn-lg px-4 bg-white">Start Your Project</a>
             </div>
           </div>
         </div>
@@ -834,7 +834,7 @@
 
         <!-- View More Projects -->
         <div class="view-more-container">
-          <a href="contact-us.php" class="view-more-btn">
+          <a href="https://pswebstudio.netlify.app/contact-us.php" class="view-more-btn">
             <i class="bi bi-chat-dots me-2"></i> Start Your Project
           </a>
         </div>
@@ -918,7 +918,7 @@
               Our team is ready to bring your ideas to life.
             </p>
             <div class="d-flex flex-wrap justify-content-center gap-3">
-              <a href="contact-us.php" class="btn btn-primary btn-lg px-4">
+              <a href="https://pswebstudio.netlify.app/contact-us.php" class="btn btn-primary btn-lg px-4">
                 <i class="bi bi-chat-dots me-2"></i>Get a Free Quote
               </a>
               <a href="tel:+919876543210" class="btn btn-outline-primary btn-lg px-4">
@@ -938,7 +938,7 @@
         <!-- Brand Section -->
         <div class="col-lg-4 col-md-6">
           <div class="footer-brand">
-            <a href="index.html" class="logo d-flex align-items-center mb-3">
+            <a href="https://pswebstudio.netlify.app/" class="logo d-flex align-items-center mb-3">
               <span class="sitename">PSWeb Studio</span>
             </a>
             <p class="tagline">
@@ -962,10 +962,10 @@
               <div class="col-6 col-md-4">
                 <h5>Studio</h5>
                 <ul class="list-unstyled">
-                  <li><a href="about-us.html">About</a></li>
+                  <li><a href="https://pswebstudio.netlify.app//about-us.html">About</a></li>
                   <li><a href="portfolio.html" class="active">Portfolio</a></li>
                   <li><a href="index.html#services">Services</a></li>
-                  <li><a href="contact-us.php">Contact</a></li>
+                  <li><a href="https://pswebstudio.netlify.app/contact-us.php">Contact</a></li>
                 </ul>
               </div>
               <div class="col-6 col-md-4">
