--- a/about-us.html
+++ b/about-us.html
@@ -228,7 +228,7 @@
     <div class="nav-wrap">
 
       <div class="container d-flex justify-content-between position-relative">
-              <a href="index.html" class="logo d-flex align-items-center">
+              <a href="https://pswebstudio.netlify.app/" class="logo d-flex align-items-center">
          <img src="images/psweb-logo.png" alt="logo">
         </a>
         <nav id="navmenu" class="navmenu">
@@ -236,7 +236,7 @@
             <li><a href="#hero" class="active">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="https://pswebstudio.netlify.app/portfolio/">Portfolio</a></li>
             <li><a href="#team">Team</a></li>
             <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
@@ -245,7 +245,7 @@
                 <li><a href="#">Blog</a></li>
               </ul>
             </li>
-            <li><a href="contact-us.php" class="contact-blink">Contact</a></li>
+            <li><a href="https://pswebstudio.netlify.app/contact-us.php" class="contact-blink">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -350,7 +350,7 @@
           <h2 class="text-white mb-3">Let's Build Something Great Together</h2>
           <p class="text-white">Whether you're launching a new business or upgrading your current site, we’ll help you create an online presence that truly works.</p>
           <div class="cta-buttons">
-            <a href="contact-us.php" class="btn-light">Start a Project</a>
+            <a href="https://pswebstudio.netlify.app/contact-us.php" class="btn-light">Start a Project</a>
             <a href="portfolio.html" class="btn-outline">View Portfolio</a>
           </div>
         </div>
