--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
     <div class="nav-wrap">
 
       <div class="container d-flex justify-content-between position-relative">
-              <a href="index.html" class="logo d-flex align-items-center">
+              <a href="https://pswebstudio.netlify.app/" class="logo d-flex align-items-center">
          <img src="images/psweb-logo.png" alt="logo">
         </a>
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about-us.html">About</a></li>
+            <li><a href="https://pswebstudio.netlify.app/" class="active">Home</a></li>
+            <li><a href="https://pswebstudio.netlify.app//about-us.html">About</a></li>
             <li><a href="services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="https://pswebstudio.netlify.app/portfolio/">Portfolio</a></li>
             <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">Profile</a></li>
@@ -61,7 +61,7 @@
                 <li><a href="#">Blog</a></li>
               </ul>
             </li>
-            <li><a href="contact-us.php" class="contact-blink">Contact</a></li>
+            <li><a href="https://pswebstudio.netlify.app/contact-us.php" class="contact-blink">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -978,7 +978,7 @@
       <!-- Brand Section -->
       <div class="col-lg-4 col-md-6">
         <div class="footer-brand">
-          <a href="index.html" class="logo d-flex align-items-center mb-3">
+          <a href="https://pswebstudio.netlify.app/" class="logo d-flex align-items-center mb-3">
             <span class="sitename">PSWeb Studio</span>
           </a>
 
